@@ -10,14 +10,14 @@ if "%JAVA_HOME%" == ""  goto javaerror
 set PATH=%PATH%;%JAVA_HOME%\bin
 
 
-set CP=.;.\admin.jar;.\lib\ldap.jar;%JBOSS_HOME%\client\jnp-client.jar;%JBOSS_HOME%\client\jboss-j2ee.jar;%JBOSS_HOME%\client\jbossall-client.jar;%JBOSS_HOME%\client\jboss-client.jar;%JBOSS_HOME%\client\jbosssx-client.jar;%JBOSS_HOME%\client\jboss-common-client.jar
+set CP=.;.\admin.jar;.\lib\ldap.jar;lib\log4j-1.2.7.jar;%JBOSS_HOME%\client\jnp-client.jar;%JBOSS_HOME%\client\jboss-j2ee.jar;%JBOSS_HOME%\client\jbossall-client.jar;%JBOSS_HOME%\client\jboss-client.jar;%JBOSS_HOME%\client\jbosssx-client.jar;%JBOSS_HOME%\client\jboss-common-client.jar
 
 java -cp %CP% se.anatom.ejbca.admin.Install install windows en ejbca jboss 
 
 if NOT ERRORLEVEL 0 goto end
 
 keytool -alias EJBCA-CA -delete -keystore %JAVA_HOME%\jre\lib\security\cacerts -storepass %JAVACACERTPASSWD%
-keytool -alias EJBCA-CA -import -trustcacerts -file tmp\rootca.der -keystore %JAVA_HOME%\jre\lib\security\cacerts -storepass %JAVACACERTPASSWD%
+keytool -alias EJBCA-CA -import -trustcacerts -file tmp\rootca.der -keystore %JAVA_HOME%\jre\lib\security\cacerts -storepass %JAVACACERTPASSWD%  -noprompt
 
 del tmp\rootca.der
 
